# comprs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  browser-entry.js  browser-streaming.js  browser.js  codecov.yml  deny.toml  index.d.mts  index.d.ts  index.js  index.mjs  node.d.ts  node.js  package.json  pnpm-lock.yaml  renovate.json  streams.d.ts  streams.js  tsconfig.json  vitest.config.mts
.changeset/: brotli-dictionary.md  brotli-support.md  browser-dict-max-output-size.md  fix-decompress-task-double-copy.md  fix-post-release-bugs.md  fix-publish-config.md  gzip-support.md  lz4-support.md  middleware-initial.md  middleware-subpath.md  rename-scoped-package.md  rename-to-comprs.md  streaming-api.md  v1-release.md  v1.1.0-performance.md  validate-max-dict-size.md  zstd-compress.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bencher.yml  ci.yml  codeql.yml  codspeed.yml  playground.yml  release.yml  renovate.yml
__test__/: async.spec.ts  bench-fixtures.ts  brotli-dict.spec.ts  brotli.bench.ts  brotli.compare.bench.ts  brotli.spec.ts  crc32.spec.ts  decompress-stream.spec.ts  deflate.bench.ts  deflate.compare.bench.ts  detect.spec.ts  edge-cases.spec.ts  esm-import.mjs  gzip-header.spec.ts  gzip-streaming.spec.ts  gzip.bench.ts  gzip.compare.bench.ts  gzip.spec.ts  index.bench.ts  index.spec.ts  interop.spec.ts  lz4.bench.ts  lz4.spec.ts  max-output-size.spec.ts  node-streams.spec.ts  streaming.compare.bench.ts  streaming.spec.ts  wasm.spec.ts  zstd-dict.spec.ts  zstd.bench.ts  zstd.compare.bench.ts  zstd.spec.ts
crates/bench/: Cargo.toml
crates/bench/benches/: brotli.rs  deflate.rs  gzip.rs  lz4.rs  zstd.rs
crates/bench/src/: lib.rs
crates/core/: Cargo.toml
crates/core-lib/: Cargo.toml
crates/core-lib/src/: brotli.rs  brotli_stream.rs  crc.rs  detect.rs  error.rs  gzip.rs  gzip_stream.rs  lib.rs  lz4.rs  lz4_stream.rs  zstd.rs  zstd_stream.rs
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: fuzz_brotli_decompress.rs  fuzz_deflate_decompress.rs  fuzz_gzip_decompress.rs  fuzz_zstd_decompress.rs
crates/core/src/: brotli_impl.rs  brotli_stream.rs  crc.rs  detect.rs  error.rs  gzip.rs  gzip_stream.rs  lib.rs  lz4.rs  lz4_stream.rs  zstd.rs  zstd_stream.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
e2e/: browser.spec.ts  global.d.ts  index.html  vite.config.mjs  wasm-bun.test.ts  wasm-deno.test.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: comprs-mock.js  index.html  main.js  package.json  pnpm-lock.yaml  style.css  vite.config.js  wasm-loader.js
playground/public/: coi-serviceworker.js
scripts/: build-wasm-bindgen.js  optimize-wasm.js  patch-browser-js.js  sync-cargo-version.js  vitest-to-bmf.js
