[workspace]
members = ["crates/core"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/derodero24/zflate"

[workspace.dependencies]
# napi-rs
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-build = "2"
napi-derive = { version = "3", default-features = false, features = ["type-def"] }

# Compression
zstd = { version = "0.13", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"
