[workspace]
members = ["crates/core", "crates/bench"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/derodero24/zflate"

[workspace.dependencies]
# napi-rs
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-build = "2"
napi-derive = { version = "3", default-features = false, features = ["type-def"] }

# Compression
brotli = { version = "8", default-features = false, features = ["std"] }
zstd = { version = "0.13", default-features = false, features = ["zdict_builder"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
lz4_flex = { version = "0.11", default-features = false, features = ["std", "frame"] }

# Utilities
crc32fast = "1"

# Error handling
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "symbols"
