[package]
name = "zflate-bench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }
flate2 = { workspace = true }
brotli = { workspace = true }
zstd = { workspace = true }

[[bench]]
name = "gzip"
harness = false

[[bench]]
name = "deflate"
harness = false

[[bench]]
name = "brotli"
harness = false

[[bench]]
name = "zstd"
harness = false
