[package]
name = "comprs"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
comprs-core = { path = "../core-lib", features = ["zstdmt"] }
napi = { workspace = true }
napi-derive = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
comprs-core = { path = "../core-lib", default-features = false }

[build-dependencies]
napi-build = { workspace = true }
